# CineSync

./: .gitignore  .isort.cfg  AGENTS.md  ARCHITECTURE.md  CHARACTER_ASSET_CREATION_MANUAL.md  COMPLETE_MIGRATION_INSTRUCTIONS.md  DEPLOYMENT_CONFIGURATION_STRATEGY.md  Dockerfile.backend  Dockerfile.frontend  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_AUDIT_REPORT.md  README.md  README_SCRIPTS.md  SETUP_MANUAL.md  SHARED_RESOURCES_STRATEGY.md  STARTUP_GUIDE.md  SYSTEM_VERIFICATION.md  create_background_placeholders.py  create_proper_preset_structure.py  create_side_placeholders.py  crush.json  debug_preset.py  docker-compose.yml  final_integration_test.py  frontend-performance-testing.yml  integration_test_export.json  integration_test_final.py  minimal_backend.py  mypy.ini  pyproject.toml  recreate_presets_structure.py  requirements.txt  setup_web_ui.sh  start_web_ui.sh  test_api.html  test_api_call.js  test_shared_resources.py  (+1 more)
backend/: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  MIGRATION_COMPLETION_REPORT.md  pyproject.toml  pytest.ini  run_backend.py  run_batch.py  run_cli.py  setup.py
backend/app/: WEBSOCKET_ENHANCEMENTS.md  __init__.py  batch_processor.py  cli.py  demo_websocket_events.py  main.py  main_minimal.py  main_new.py  shared_config.py  start_backend.py
backend/app/api/: __init__.py  (+4 more)
backend/lipsync_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/profiles/: profile_manifest.json
backend/tests/: README.md  TESTING_STATUS_COMPLETE.md  conftest.py  fix_imports.py  verify_structure.py
(+386 files in other folders)
